k3s-manifests/whoami/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    app.kubernetes.io/name: whoami
