k3s-manifests/whoami/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  labels:
    app.kubernetes.io/name: whoami
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - name: http
      protocol: TCP
      port: 2001
      targetPort: http
